force-app/main/default/objects/Question__c/fields/Answer1__c.field-meta.xml
<CustomField>
    <fullName>Answer1__c</fullName>
    <label>Answer1</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>