force-app/main/default/objects/Question__c/fields/Answer2__c.field-meta.xml
<CustomField>
    <fullName>Answer2__c</fullName>
    <label>Answer2</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>