force-app/main/default/objects/Question__c/fields/Answer3__c.field-meta.xml
<CustomField>
    <fullName>Answer3__c</fullName>
    <label>Answer3</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>