force-app/main/default/objects/Question__c/fields/Feedback_Correct__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Correct__c</fullName>
    <label>Feedback Correct</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>