force-app/main/default/objects/Question__c/fields/Feedback_Incorrect__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Incorrect__c</fullName>
    <label>Feedback Incorrect</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>