force-app/main/default/objects/Question__c/fields/Identify_Correct_Answer__c.field-meta.xml
<CustomField>
    <fullName>Identify_Correct_Answer__c</fullName>
    <label>Identify Correct Answer</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Answer1</fullName>
            </value>
            <value>
                <fullName>Answer2</fullName>
            </value>
            <value>
                <fullName>Answer3</fullName>
            </value>
            <value>
                <fullName>Answer4</fullName>
            </value>
            <value>
                <fullName>Answer5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>