force-app/main/default/objects/Question__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <label>Question Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single-Select</fullName>
            </value>
            <value>
                <fullName>Multi-Select</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>