force-app/main/default/objects/Question__c/validationRules/Is_multiple_answers_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_multiple_answers_selected</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Question_Type__c ,&quot;Single-Select&quot;) 
&amp;&amp;
IF(IF(INCLUDES(Identify_Correct_Answer__c, &quot;Answer1&quot;),1,0)+
IF(INCLUDES(Identify_Correct_Answer__c, &quot;Answer2&quot;),1,0)+
IF(INCLUDES(Identify_Correct_Answer__c, &quot;Answer3&quot;),1,0)+
IF(INCLUDES(Identify_Correct_Answer__c, &quot;Answer4&quot;),1,0)+
IF(INCLUDES(Identify_Correct_Answer__c, &quot;Answer5&quot;),1,0) &gt; 1,true,false)</errorConditionFormula>
    <errorMessage>Identify Correct Answer cannot have multiple values when Question Type is Single-Select</errorMessage>
</ValidationRule>